# WinPartFlash

./: CLAUDE.md  LICENSE  README.md  WinPartFlash.sln  WinPartFlash.slnx
.github/workflows/: build.yml  release.yml
WinPartFlash/: Crc32.cs  GuidPartitionAttributeFlags.cs  GuidPartitionEntry.cs  GuidPartitionTable.cs  GuidPartitionTableHeader.cs  GuidPartitionTableHelper.cs  PartFlashService.cs  Program.cs  ThrowHelper.cs  Utils.cs  WinPartFlash.csproj  WinPartFlashClient.cs
WinPartFlash.Gui/: .gitignore  App.axaml  App.axaml.cs  Program.cs  ViewLocator.cs  WinPartFlash.Gui.csproj  app.manifest
WinPartFlash.Gui/Assets/: app-icon.icns
WinPartFlash.Gui/Compression/: CompressionLevelInfo.cs  CompressionOptions.cs  CompressionRatioProbe.cs  CompressionStreamCopierExtension.cs  CompressionStreamCopierFactory.cs  CompressionType.cs  GzipCompressionStreamCopier.cs  GzipDeCompressionStreamCopier.cs  GzipDecompressionStreamCopier.cs  ICompressionStreamCopier.cs  ICompressionStreamCopierFactory.cs  Lz4CompressionStreamCopier.cs  Lz4DecompressionStreamCopier.cs  RawStreamCopier.cs  XzDecompressionStreamCopier.cs  ZstandardCompressionStreamCopier.cs  ZstandardDecompressionStreamCopier.cs
WinPartFlash.Gui/Diagnostics/: DiagnosticsExtensions.cs  ISystemInfoProvider.cs  SystemInfoProvider.cs
WinPartFlash.Gui/FileOpenHelper/: FileOpenHelper.cs  FileOpenHelperExtensions.cs  IFileOpenHelper.cs
WinPartFlashHelper/: CMakeLists.txt  com.hcgstudio.winpartflash.helper.plist  helper.c
WinPartFlashLib/: .gitignore  CMakeLists.txt  library.c  library.h  test.c  xpc_client.c
(+67 files in other folders)
